--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,8 @@ SQLAlchemy==1.3.4
 visitor==0.1.3
 Werkzeug==0.15.4
 WTForms==2.2.1
+
+flake8-docstrings==1.1.0
+flake8-mock==0.3
+flake8-quotes==0.11.0
+flake8==3.7.5
